# azapptoolkit

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile  rust-toolchain.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: cert.rs  dto.rs  lib.rs  main.rs  state.rs  token_adapter.rs
apps/desktop/src-tauri/src/commands/: activity.rs  app_roles.rs  applications.rs  audit.rs  auth.rs  backup.rs  bulk.rs  conditional_access.rs  config.rs  consent.rs  credentials.rs  defaults.rs  diagnostics.rs  dispatch.rs  enterprise_application.rs  exchange.rs  export.rs  expose_api.rs  graph_err.rs  graph_roles.rs  guid.rs  keyvault.rs  keyvault_rbac.rs  managed_identity.rs  mod.rs  permission_tester.rs  permissions.rs  readiness.rs  remediation.rs  restore.rs  search.rs  sharepoint.rs  sso.rs  throttle.rs  updater.rs  usage.rs
apps/desktop/web-rs/: Cargo.toml  Trunk.toml  index.html  styles.css
apps/desktop/web-rs/src/: constants.rs  lib.rs  main.rs  state.rs  util.rs
apps/desktop/web-rs/src/bindings/: activity.rs  applications.rs  audit.rs  auth.rs  backup.rs  bulk.rs  common.rs  conditional_access.rs  config.rs  consent.rs  credentials.rs  defaults.rs  diagnostics.rs  enterprise_application.rs  events.rs  exchange.rs  expose_api.rs  graph_roles.rs  keyvault.rs  keyvault_rbac.rs  managed_identity.rs  mod.rs  permission_tester.rs  permissions.rs  readiness.rs  remediation.rs  search.rs  sharepoint.rs  sso.rs  updater.rs  usage.rs
apps/desktop/web-rs/src/components/: audit_dashboard.rs  bulk_action_bar.rs  changelog_notes.rs  claims_editor.rs  collapsible_scoping_section.rs  date_range_filter.rs  detail_header.rs  exchange_scoping_section.rs  export_menu.rs  filter_chip.rs  filter_toggle.rs  global_search.rs  group_autocomplete.rs  held_permissions_panel.rs  icon.rs  list_scaffold.rs  managed_scope_group_panel.rs  mod.rs  modal_shell.rs  open_items_dock.rs  open_items_workspace.rs  orgwide_scope_callout.rs  owner_picker.rs  permission_picker.rs  requires_role.rs  saved_views.rs  scope_badge.rs  scope_panel.rs  scope_unavailable_banner.rs  scope_wizard.rs  scoped_mailbox_wizard.rs  select_all_bar.rs  sharepoint_sites_section.rs  site_selection_panel.rs  sso_summary.rs  toast.rs  type_chip.rs  update_splash.rs  vault_picker.rs  virtual_list.rs
apps/desktop/web-rs/src/demo/: mod.rs
apps/desktop/web-rs/src/hooks/: mod.rs  use_command.rs  use_debounced.rs  use_escape.rs  use_filtered_list.rs  use_focus_trap.rs  use_grid_keynav.rs  use_list_export.rs  use_progress_stream.rs
apps/desktop/web-rs/src/ipc_mock/: fixtures.rs  mod.rs
apps/desktop/web-rs/src/test_support/: fixtures.rs  mod.rs
apps/desktop/web-rs/src/views/: app_permissions_view.rs  application_detail_pane.rs  application_list.rs  applications_view.rs  audit_view.rs  bulk_actions_view.rs  config_screen.rs  consent_grants_view.rs  credentials_dashboard.rs  dr.rs  enterprise_application_list.rs  enterprise_applications_view.rs  home_dashboard.rs  key_vault_view.rs  managed_identities.rs  managed_identity_detail_pane.rs  mod.rs  pairing.rs  permission_tester_view.rs  readiness_view.rs  resource_access_view.rs  security_view.rs  settings_view.rs  shell.rs  sign_in.rs
apps/desktop/web-rs/tests/: application_detail.rs  application_list.rs  confirm_dialog.rs  copyable_id.rs  credentials_dashboard.rs  dr.rs  enterprise_application_list.rs  event_streams.rs  global_search.rs  gui.rs  gui_1.rs  gui_2.rs  gui_3.rs  key_vault.rs  managed_identities.rs  managed_identity_scoping.rs  open_items_dock.rs  orgwide_scope_callout.rs  permission_picker.rs  readiness.rs  reauth.rs  scope_wizard.rs  scoped_mailbox_wizard.rs  security_audit.rs  security_findings.rs  view_smoke.rs
apps/desktop/web-rs/tests/gui/: application_detail.rs  application_list.rs  confirm_dialog.rs  copyable_id.rs  credentials_dashboard.rs  dr.rs  enterprise_application_list.rs  event_streams.rs  gallery.rs  global_search.rs  (+13 more)
crates/azapptoolkit-arm/: Cargo.toml
crates/azapptoolkit-arm/src/: client.rs  error.rs  lib.rs  loganalytics.rs  models.rs  transport.rs
crates/azapptoolkit-auth/: Cargo.toml
crates/azapptoolkit-auth/src/: error.rs  lib.rs  service.rs  token_cache.rs
crates/azapptoolkit-auth/src/service/: loopback.rs  mod.rs  scopes.rs  wire.rs
crates/azapptoolkit-core/: Cargo.toml
crates/azapptoolkit-core/src/: audit.rs  azure_roles.rs  cache.rs  capabilities.rs  cloud.rs  constants.rs  defaults.rs  http_retry.rs  identity.rs  lib.rs  models.rs  net.rs  redirect.rs  scoping.rs  settings.rs  token.rs
crates/azapptoolkit-core/src/audit/: credentials.rs  mod.rs  permissions.rs  scoring.rs  types.rs
crates/azapptoolkit-dto/: Cargo.toml
crates/azapptoolkit-dto/src/: activity.rs  applications.rs  audit.rs  backup.rs  bulk.rs  conditional_access.rs  config.rs  consent.rs  credentials.rs  diagnostics.rs  enterprise_application.rs  exchange.rs  expose_api.rs  keyvault.rs  lib.rs  managed_identity.rs  permission_tester.rs  permissions.rs  readiness.rs  remediation.rs  search.rs  sharepoint.rs  sso.rs  updater.rs  usage.rs
crates/azapptoolkit-exchange/: Cargo.toml
crates/azapptoolkit-exchange/src/: client.rs  error.rs  lib.rs  models.rs  roles.rs
crates/azapptoolkit-exchange/src/client/: groups.rs  rbac.rs  tests.rs  transport.rs
crates/azapptoolkit-graph/: Cargo.toml
crates/azapptoolkit-graph/src/: client.rs  error.rs  lib.rs
crates/azapptoolkit-graph/src/client/: applications.rs  batch.rs  credentials.rs  directory.rs  policies.rs  roles_grants.rs  service_principals.rs  sharepoint.rs  tests.rs  transport.rs
crates/azapptoolkit-keyvault/: Cargo.toml
crates/azapptoolkit-keyvault/src/: client.rs  error.rs  lib.rs  models.rs  validate.rs
crates/azapptoolkit-permissions/: Cargo.toml
crates/azapptoolkit-permissions/data/: catalog.json
crates/azapptoolkit-permissions/src/: lib.rs
(+122 files in other folders)
