[package]
name = "azapptoolkit-arm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Minimal Azure Resource Manager (ARM) client for azapptoolkit — role assignments for managed identities"

[dependencies]
azapptoolkit-core = { path = "../azapptoolkit-core" }

tokio = { workspace = true }
bytes = "1"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
