[package]
name = "azapptoolkit-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Entra ID authentication (OAuth2 PKCE) for azapptoolkit"

[dependencies]
azapptoolkit-core = { path = "../azapptoolkit-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
keyring-core = "1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
webbrowser = "1"

[dev-dependencies]
wiremock = { workspace = true }

# OS-native credential stores registered as keyring-core's default store
# (replaces the dropped `keyring` meta-crate's `use_native_store`). One per
# platform; the per-OS cfg also keeps them out of any wasm build. Linux uses the
# Secret Service (zbus, pure-Rust) — the persistent desktop keyring.
[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
zbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[lints]
workspace = true
