[package]
name = "azapptoolkit-dto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Serializable DTOs shared between the Tauri backend and the WASM front-end"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
azapptoolkit-core = { path = "../azapptoolkit-core" }
azapptoolkit-auth = { path = "../azapptoolkit-auth", optional = true }
azapptoolkit-graph = { path = "../azapptoolkit-graph", optional = true }
azapptoolkit-exchange = { path = "../azapptoolkit-exchange", optional = true }
azapptoolkit-keyvault = { path = "../azapptoolkit-keyvault", optional = true }
azapptoolkit-arm = { path = "../azapptoolkit-arm", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
# Test-only: constructs the `url::ParseError` behind `AuthError::Url` so the
# `From<AuthError>` code-map test can pin that variant too.
url = { workspace = true }

[features]
default = []
# Enabled by the Tauri backend; pulls in non-WASM crates to provide
# `From<AuthError>` / `From<GraphError>` / `From<ExchangeError>` /
# `From<KeyVaultError>` / `From<ArmError>` conversions on `UiError`. The WASM
# front-end leaves this off so the crate compiles to wasm32-unknown-unknown.
backend = [
    "dep:azapptoolkit-auth",
    "dep:azapptoolkit-graph",
    "dep:azapptoolkit-exchange",
    "dep:azapptoolkit-keyvault",
    "dep:azapptoolkit-arm",
]

[lints]
workspace = true
