[package]
name = "azapptoolkit-keyvault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Minimal Azure Key Vault secrets client for azapptoolkit"

[dependencies]
azapptoolkit-core = { path = "../azapptoolkit-core" }

tokio = { workspace = true }
bytes = "1"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
