[package]
name = "azapptoolkit-permissions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Microsoft Graph permissions catalog (bundled + on-demand)"

[dependencies]
azapptoolkit-core = { path = "../azapptoolkit-core" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
