[package]
name = "azapptoolkit-permissions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Bundled Microsoft Graph permissions catalog (resource directory; live permission data resolves via the Graph client)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
