[package]
name = "azapptoolkit-web-rs"
version = "0.3.2"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
description = "azapptoolkit desktop front-end (Leptos + Thaw, runs in Tauri webview as WASM)"
publish = false

# Excluded from the root workspace because it targets `wasm32-unknown-unknown`
# only and depends on git-only crates (see `/Cargo.toml` `exclude`).

[dependencies]
azapptoolkit-core = { path = "../../../crates/azapptoolkit-core" }
azapptoolkit-dto = { path = "../../../crates/azapptoolkit-dto" }

leptos = { version = "0.8", features = ["csr"] }
thaw = { version = "0.5.0-beta", features = ["csr"] }

# Pinned to an exact rev (not the `v2` branch) so WASM builds are reproducible —
# a branch pin silently absorbs whatever upstream pushes. Bump deliberately.
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "289bd29fcbce1ee86c45089477898dbdf23f8fca", features = ["core", "event"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
base64 = "0.22"
web-sys = { version = "0.3", features = ["MediaQueryList", "Window", "Document", "HtmlElement", "Element", "Node", "NodeList", "Clipboard", "Navigator", "ResizeObserver", "ResizeObserverEntry", "Storage", "File", "FileList", "Blob", "HtmlInputElement", "Event"] }
console_error_panic_hook = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Only used by the `test-support` harness to build/read mock IPC payloads. Pinned
# to the version tauri-sys deserializes with so fixtures round-trip identically.
serde-wasm-bindgen = { version = "0.6.5", optional = true }

chrono = { version = "0.4", features = ["serde", "wasmbind"] }
tracing = "0.1"

[features]
# Compiles the `test_support` browser-test harness (mock IPC + view mounting).
# Off by default so it never enters the shipped Trunk bundle; enabled by
# `just web-itest`.
# `web-sys/KeyboardEvent` is only needed by the test harness's `press_key`
# helper, so it rides the test-support feature and stays out of the shipped bundle.
test-support = ["dep:serde-wasm-bindgen", "web-sys/KeyboardEvent", "web-sys/KeyboardEventInit"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
