[package]
name = "azapptoolkit-web-rs"
version = "0.20.5"
edition = "2024"
rust-version = "1.97"
license = "MIT OR Apache-2.0"
description = "azapptoolkit desktop front-end (Leptos + Thaw, runs in Tauri webview as WASM)"
publish = false

# Excluded from the root workspace because it targets `wasm32-unknown-unknown`
# only and depends on git-only crates (see `/Cargo.toml` `exclude`).

[dependencies]
azapptoolkit-core = { path = "../../../crates/azapptoolkit-core" }
azapptoolkit-dto = { path = "../../../crates/azapptoolkit-dto" }

leptos = { version = "0.8", features = ["csr"] }
thaw = { version = "0.5.0-beta", features = ["csr"] }

# Pinned to an exact rev (not the `v2` branch) so WASM builds are reproducible —
# a branch pin silently absorbs whatever upstream pushes. Bump deliberately.
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", rev = "289bd29fcbce1ee86c45089477898dbdf23f8fca", features = ["core", "event"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
base64 = "0.22"
web-sys = { version = "0.3", features = ["MediaQueryList", "Window", "Document", "HtmlElement", "Element", "Node", "NodeList", "Clipboard", "Navigator", "ResizeObserver", "ResizeObserverEntry", "Storage", "File", "FileList", "Blob", "HtmlInputElement", "Event"] }
console_error_panic_hook = "0.1"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Used by the `mock-ipc` bridge (test harness + GitHub Pages demo) to build/read
# mock IPC payloads. Pinned to the version tauri-sys deserializes with so fixtures
# round-trip identically.
serde-wasm-bindgen = { version = "0.6.5", optional = true }

chrono = { version = "0.4", features = ["serde", "wasmbind"] }
tracing = "0.1"

[features]
# The shared mock Tauri IPC bridge (`src/ipc_mock/`): installs a fake
# `window.__TAURI_INTERNALS__` + a route registry of canned fixtures. Internal —
# enabled transitively by `test-support` and `demo`, never on its own.
mock-ipc = ["dep:serde-wasm-bindgen"]

# Compiles the `test_support` browser-test harness (mock IPC + view mounting).
# Off by default so it never enters the shipped Trunk bundle; enabled by
# `just web-itest`.
# `web-sys/KeyboardEvent` (press_key) and `web-sys/HtmlTextAreaElement`
# (set_textarea_value) are only needed by the test harness, so they ride the
# test-support feature and stay out of the shipped bundle.
test-support = ["mock-ipc", "web-sys/KeyboardEvent", "web-sys/KeyboardEventInit", "web-sys/HtmlTextAreaElement"]

# Standalone browser demo for GitHub Pages: installs the mock IPC bridge
# pre-loaded with curated sample data and signs into a demo tenant, so the full
# UI runs with no Tauri backend. Enabled only by `just web-build-pages`; never
# the desktop build, so the mock + fixtures + demo banner stay out of releases.
demo = ["mock-ipc"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

# The browser GUI tests (`just web-itest`) are the slowest CI step. Each of the
# ~21 integration-test binaries is a full debug wasm — and DWARF debuginfo is
# ~96% of it (measured: 1954 MB → 78 MB stripped). wasm-bindgen-test-runner must
# decode that whole module before it can run, which cost ~24s PER binary (~10 min
# across the suite). Stripping debuginfo from the linked test wasm cuts that
# decode to near-nothing; the runner strips debuginfo from the served module
# anyway, so the in-browser behaviour is unchanged, and test panics assert on
# messages (kept by console_error_panic_hook), not on wasm stack frames. Scoped to
# `test` so `just dev` / `web-build` (profile.dev) keep their debuginfo. This is
# NOT `strip = true`: that also drops the `name` section, making any wasm panic
# trace fully anonymous.
[profile.test]
strip = "debuginfo"
